--- a/templates/order.html
+++ b/templates/order.html
@@ -49,7 +49,7 @@
                                         <td>{{ order.zip_code }}{{ order.city }}{{ order.address }}</td>
                                         <td>{{ order.create_date }}</td>
                                         {% if order.paid %}
-                                            <td><span class="label label-primary">已付款</span></td>
+                                            <td><span class="label label-success">已付款</span></td>
                                         {% else %}
                                             <td><span class="label label-primary">未付款</span></td>
                                         {% endif %}
